# syntect-assets

./: Cargo.toml  README.md
assets/patches/: Markdown-002.sublime-syntax.patch  Markdown-003.sublime-syntax.patch  Markdown.sublime-syntax.patch
examples/: line.rs  list_syntaxes_and_themes.rs  simple.rs
src/: assets.rs  error.rs  lib.rs  syntax_mapping.rs
src/assets/: assets_metadata.rs  build_assets.rs  lazy_theme_set.rs  serialized_syntax_set.rs
src/syntax_mapping/: ignored_suffixes.rs
tests/: assets.rs  no_duplicate_extensions.rs
