[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "[syntect](https://github.com/trishume/syntect) syntax and theme assets from [bat](https://github.com/sharkdp/bat)."
homepage = "https://github.com/ttys3/syntect-assets"
license = "MIT OR Apache-2.0"
name = "syntect-assets"
repository = "https://github.com/ttys3/syntect-assets"
version = "0.23.3"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
edition = '2021'

[features]
default = ["application"]
# Feature required for syntect-assets the application. Should be disabled when depending on
# syntect-assets as a library.
application = ["build-assets", "regex-onig"]

build-assets = ["syntect/yaml-load", "syntect/plist-load", "regex"]

# You need to use one of these if you depend on syntect-assets as a library:
regex-onig = ["syntect/regex-onig"] # Use the "oniguruma" regex engine
regex-fancy = ["syntect/regex-fancy"] # Use the rust-only "fancy-regex" engine

[dependencies]
nu-ansi-term = "0.47.0"
ansi_colours = "^1.2"
once_cell = "1.17"
thiserror = "1.0"
wild = { version = "2.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
semver = "1.0"
path_abs = { version = "0.5", default-features = false }
regex = { version = "1.8.3", optional = true }
bincode = "1.0"
flate2 = "1.0"
globset = "0.4"
log = "0.4.20"

[dependencies.syntect]
version = "5.0.0"
default-features = false
features = ["parsing"]

[dev-dependencies]
assert_cmd = "2.0.10"
expect-test = "1.4.0"
serial_test = { version = "2.0.0", default-features = false }
predicates = "3.0.3"
wait-timeout = "0.2.0"
tempfile = "3.5.0"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.26.2", default-features = false, features = ["term"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
