[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["syntax-hightlighting", "syntax", "hightlighting", "syntect", "themes"]
description = "[syntect](https://github.com/trishume/syntect) syntax and theme assets from [bat](https://github.com/sharkdp/bat)."
homepage = "https://github.com/ttys3/syntect-assets"
license = "MIT OR Apache-2.0"
name = "syntect-assets"
repository = "https://github.com/ttys3/syntect-assets"
version = "0.23.5"
exclude = ["assets/syntaxes/*", "assets/themes/*"]
edition = '2021'

[features]
default = ["regex-onig"]

# You need to use one of these if you depend on syntect-assets as a library:
regex-onig = ["syntect/regex-onig"] # Use the "oniguruma" regex engine
regex-fancy = ["syntect/regex-fancy"] # Use the rust-only "fancy-regex" engine

[dependencies]
once_cell = "1.18"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
semver = "1.0"

bincode = "1.3"
flate2 = "1.0"
globset = "0.4"
log = "0.4.20"

[dependencies.syntect]
version = "5.1.0"
default-features = false
features = ["parsing"]

[profile.release]
lto = true
strip = true
codegen-units = 1
